bug fix relating to Delta Immortality
fixed Wrongly deleting Immortality on global timer
fixed Relating Stats no being reset on Final Death
fixed Heart Update not happening at all
fixed Final Death not realizing a final Death happened because of race condition removing negative Hearts before check